--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 spring.application.name=geoProject
-spring.datasource.url=jdbc:postgresql://localhost:5432/geo-database
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/varna
+spring.datasource.username=varnauser
+spring.datasource.password=Varna@321
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-logging.level.org.springframework.web=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.default_schema="sce_geo_locations"
+spring.jpa.properties.hibernate.auto_quote_keyword=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+# Type handling
+spring.jpa.properties.hibernate.type.preferred_application_jdbc_type=BINARY
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
